# dependabot-uv-issue-10566-1

./: pyproject.toml
