[project]
name = "gnai-chatbot-web"
version = "0.0.0.dev0"
description = "GNAI Chatbot Web UI"
authors = [
  { name = "Intel" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "click",
  "chainlit"
]

[project.urls]
homepage = "https://github.com/intel-innersource/applications.ai.gnai.interfaces.web"

[project.scripts]
chatbot = "gnai.chatbot.web.cli:main"

[project.optional-dependencies]
dev = [
  "autopep8",
  "flake8",
  "mypy",
  "pylint",
  "types-requests"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gnai.chatbot.web"
module-root = ""

[tool.pylint.FORMAT]
max-line-length = 140

[tool.pylint.BASIC]
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "broad-except",
  "fixme",
  "broad-exception-raised"
]

[tool.pylint.DESIGN]
min-public-methods = 0
max-parents = 8
max-args = 8
max-locals = 20
max-positional-arguments = 7

[tool.mypy]
show_column_numbers = true
follow_imports = "normal"
disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = false
warn_no_return = true
warn_unused_ignores = true
show_error_context = true
show_error_codes = true
pretty = true
